Android UI Overhaul Part 4/4 (#7235)
* android: Rework cheats

Reworks cheats to use the navigation component, kotlin, and a tweaked layout for a better tuned look.

* android: Convert remaining files to kotlin and add overlay home button

* android: Remove Picasso dependency

* android: Fix home option layout centering

* android: Adjust logo size in-app

--- a/src/android/app/src/main/res/navigation/home_navigation.xml
+++ b/src/android/app/src/main/res/navigation/home_navigation.xml
@@ -76,6 +76,20 @@
         android:label="SystemFilesFragment" />
 
     <fragment
+        android:id="@+id/cheatsFragment"
+        android:name="org.citra.citra_emu.features.cheats.ui.CheatsFragment"
+        android:label="CheatsFragment" >
+        <argument
+            android:name="titleId"
+            app:argType="long"
+            android:defaultValue="-1L" />
+    </fragment>
+
+    <action
+        android:id="@+id/action_global_cheatsFragment"
+        app:destination="@id/cheatsFragment" />
+
+    <fragment
         android:id="@+id/driverManagerFragment"
         android:name="org.citra.citra_emu.fragments.DriverManagerFragment"
         android:label="DriverManagerFragment" />
