--- a/src/android/app/src/main/res/layout/card_home_option.xml
+++ b/src/android/app/src/main/res/layout/card_home_option.xml
@@ -6,8 +6,8 @@
     android:id="@+id/option_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginVertical="12dp"
-    android:layout_marginHorizontal="16dp"
+    android:layout_marginBottom="24dp"
+    android:layout_marginHorizontal="12dp"
     android:background="?attr/selectableItemBackground"
     android:backgroundTint="?attr/colorSurfaceVariant"
     android:clickable="true"
@@ -16,7 +16,8 @@
     <LinearLayout
         android:id="@+id/option_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical">
 
         <ImageView
             android:id="@+id/option_icon"
@@ -44,7 +45,7 @@
                 tools:text="@string/about" />
 
             <com.google.android.material.textview.MaterialTextView
-                style="@style/TextAppearance.Material3.LabelMedium"
+                style="@style/TextAppearance.Material3.BodySmall"
                 android:id="@+id/option_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -67,7 +68,8 @@
                 android:requiresFadingEdge="horizontal"
                 android:layout_marginTop="5dp"
                 android:visibility="gone"
-                tools:text="@string/about_description" />
+                tools:visibility="visible"
+                tools:text="/tree/primary:Games" />
 
         </LinearLayout>
 
