--- a/src/android/app/src/main/res/values/arrays.xml
+++ b/src/android/app/src/main/res/values/arrays.xml
@@ -77,6 +77,7 @@
         <item>@string/controller_dpad</item>
         <item>@string/controller_circlepad</item>
         <item>@string/controller_c</item>
+        <item>@string/button_home</item>
     </string-array>
 
     <string-array name="cameraImageSourceNames">
