Port yuzu-emu/yuzu#11946: "Enable (Feral Interactive) Gamemode on Linux" (#7245)

--- a/src/citra_qt/configuration/configure_general.ui
+++ b/src/citra_qt/configuration/configure_general.ui
@@ -43,6 +43,13 @@
           </property>
          </widget>
         </item>
+        <item>
+         <widget class="QCheckBox" name="toggle_gamemode">
+          <property name="text">
+           <string>Enable Gamemode</string>
+          </property>
+         </widget>
+        </item>
        </layout>
       </widget>
      </item>
