--- a/src/android/app/src/main/res/layout/fragment_emulation.xml
+++ b/src/android/app/src/main/res/layout/fragment_emulation.xml
@@ -27,6 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:defaultFocusHighlightEnabled="false"
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:visibility="invisible" />
