--- a/src/android/app/src/main/res/menu/menu_landscape_screen_layout.xml
+++ b/src/android/app/src/main/res/menu/menu_landscape_screen_layout.xml
@@ -19,6 +19,10 @@
             android:id="@+id/menu_screen_layout_sidebyside"
             android:title="@string/emulation_screen_layout_sidebyside" />
 
+        <item
+            android:id="@+id/menu_screen_layout_hybrid"
+            android:title="@string/emulation_screen_layout_hybrid" />
+
     </group>
 
 </menu>
