Port yuzu-emu/yuzu#7506 & yuzu-emu/yuzu#7861: "Fix yuzu-emu/yuzu#7502" & "yuzu: Mute audio when in background" (#7321)

--- a/src/citra_qt/configuration/configure_general.ui
+++ b/src/citra_qt/configuration/configure_general.ui
@@ -37,6 +37,13 @@
          </widget>
         </item>
         <item>
+         <widget class="QCheckBox" name="toggle_background_mute">
+          <property name="text">
+           <string>Mute audio when in background</string>
+          </property>
+         </widget>
+        </item>
+        <item>
          <widget class="QCheckBox" name="toggle_hide_mouse">
           <property name="text">
            <string>Hide mouse on inactivity</string>
